--- a/lab_1/style.css
+++ b/lab_1/style.css
@@ -1,93 +1,167 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body {
-    margin:0;
-    padding:0;
-    font-family: Arial, Helvetica, sans-serif;
-    background: url(Images/background.png) repeat-x;
-    background-size: cover;
-    overflow: hidden;
-}
-
-header {
-
-    display:flex;
+    display: flex;
     flex-direction: column;
-    align-items: center;
-    background-color: black;
-    padding: 10px;
+    align-items: center; 
+    min-height: 100vh;
+    font-family: Arial, sans-serif;
+    background-image: url(Images/background.png);
+    background-size: cover;
+    text-align: center;
 }
-
+header {
+    width: 100%;
+    background-color: black;
+    color: white;
+    box-shadow: 0 10px 10px gray;
+    padding: 10px 0;
+}
 nav {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    width: 100%;
     padding: 10px;
 }
 header h1 {
     margin: 0;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+    padding-top: 20px;
     text-align: center;
-    color:white;
     font-size: 40px;
 }
 nav img {
-    height: 100px;
+    height: 80px;
     margin-right: 20px;
 }
-
 nav a {
-    color:white;
+    cursor: pointer;
+    color: white;
+    font-size: 28px;
+    padding: 8px 16px;
     text-decoration: none;
-    margin-right: 15px;
-    font-weight: bold;
-    font-size: 22px;
 }
 nav a:hover {
-    color: gray;
-    text-decoration: underline;
+    border-radius: 20px;
+    background-color: white;
+    color: black;
+    box-shadow: 10px 5px 10px gray;
 }
-
-footer{
-position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: black;
-  color: white;
-  text-align: center;
-}
-
-.content {
-    text-align: center;
-    color: whitesmoke;
-    padding: 20px;
-    box-sizing: border-box;
-}
-
-.body-heading {
-    padding: 10px;
-}
-
-
 span {
     font-weight: bold;
 }
+.heading-container {
+    padding: 20px;
+    color: white;
+}
+.heading-container h1,
+.heading-container h2,
+.heading-container h3 {
+    margin-bottom: 15px;
+}
+
+.content-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    color: white;
+    padding: 20px;
+    margin-right: 20px; 
+    font-size: 22px;
+}
 
 .image-container {
-    display: flex; 
-    justify-content: space-between; 
-    width: 100%; 
-    gap: 10px; 
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    padding: 10px 0;
 }
 
-.image-container img {
-    flex: 1 1 auto; 
-    width: 33% ;
-    max-height: 100%;
+.footer-container {
+    width: 100%;
+    max-width: 100vw;
+    background-color: black;
+    color: white;
+    padding: 10px 0;
+    box-shadow: 0 -10px 10px gray; 
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+    font-size: 18px;
+    text-align: left;
+    color: white;
+}
+th,td {
+    border: 2px solid black;
+    padding: 12px;
+}
+th {
+    background-color: black;
+    text-align: center;
+}
+td{
+    background-color: darkgray;
+}
+table img {
+    width: 250px;
+    height: 250px;
 }
 
 
+.box {
+    flex: 1; 
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    width: 100%;
+}
 
+.form-container {
+    background-color: black;
+    padding: 30px;
+    border-radius: 10px;
+    color: white;
+    max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    width: 100%;
+}
 
+input, textarea {
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid white;
+}
+
+button {
+    padding: 10px;
+    border: 5px solid white;
+    border-radius: 15px;
+    background-color: black;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+button:hover{
+    color: black;
+    background-color: white;
+    box-shadow: 10px 5px 10px gray;
+}
