--- a/lab_1/style.css
+++ b/lab_1/style.css
@@ -1,9 +1,8 @@
 *{
-    margin: 0;
-    padding: 0;
+    padding:0;
     box-sizing: border-box;
-}
-body {
+    margin: 0;
+}body {
     display: flex;
     flex-direction: column;
     align-items: center; 
@@ -80,6 +79,10 @@ span {
     justify-content: space-around;
     width: 100%;
     padding: 10px 0;
+}
+.image-container img {
+    max-width: 30%;
+    height: auto;
 }
 
 .footer-container {
