--- a/lab_1/style.css
+++ b/lab_1/style.css
@@ -5,7 +5,7 @@
 }body {
     display: flex;
     flex-direction: column;
-    align-items: center; 
+    align-items: stretch; 
     min-height: 100vh;
     font-family: Arial, sans-serif;
     background-image: url(Images/background.png);
